# architect

./: .gitignore  Cargo.toml  README.md  build.rs
html/: result.html
src/: chart.qml  csv_output.rs  diff.rs  main.rs  output.rs  stats.rs  view.rs
src/view/: chart.qml  cli.rs  html.rs  mod.rs  qt.rs  template.html
