[package]
name = "architect"
version = "0.1.0"
authors = ["White-Oak <lpzhelud@gmail.com>"]

[dependencies]
git2 = "*"
ansi_term = "*"
chrono = "*"
lazysort = "*"
rustc-serialize = "*"
num_cpus = "*"
regex = "*"
time = "*"

[dependencies.qmlrs]
git = "https://github.com/White-Oak/qmlrs"
branch = "qtcharts-fix"
optional = true

[features]
default = ["cli"]
cli = []
qt = ["qmlrs"]
