[package]
name = "architect"
version = "0.1.0"
authors = ["White-Oak <lpzhelud@gmail.com>"]
description = "An app with several UIs that collect some simple git statistics"
repository = "https://github.com/White-Oak/architect"
readme = "README.md"
keywords = ["git", "stats", "qt", "statistics", "qml"]
license = "Apache-2.0"

[dependencies]
git2 = "*"
ansi_term = "*"
chrono = "*"
lazysort = "*"
rustc-serialize = "*"
num_cpus = "*"
time = "*"

[dependencies.qmlrs]
git = "https://github.com/White-Oak/qmlrs"
branch = "qtcharts-fix"
optional = true

[dependencies.csv]
version = "*"

[features]
default = ["cli"]
cli = []
html = []
qt = ["qmlrs"]
